cmake_minimum_required(VERSION 4.1.0)
message(STATUS "Using CMake version ${CMAKE_VERSION}")
project(WOW)
find_package(CURL REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
add_executable(main main.cpp)
target_link_libraries(main PRIVATE nlohmann_json::nlohmann_json)
target_link_libraries(main PRIVATE CURL::libcurl)